tests/suite/snapshots/suite__check__tests__check__bad-pa3-5.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-pa3-5.xi:2:28]
   │
 2 │     return 47 + (((false & ((x)))))
   ·                            ──┬──  
   ·                              ╰──── Expected bool but found int
───╯

