tests/suite/snapshots/suite__check__tests__check__bad-pa3-6.xi.snap
---
source: tests/suite/check.rs
assertion_line: 21
expression: Snapshot(context)
---
1:22 error:Unbound function baz
