tests/suite/snapshots/suite__check__tests__check__bad-pa3-7.xi.snap
---
source: tests/suite/check.rs
assertion_line: 21
expression: Snapshot(context)
---
4:9 error:Expected bool[] but found int[]
