tests/suite/snapshots/suite__check__tests__check__bad-procedure-call1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 21
expression: Snapshot(context)
---
2:5 error:Not a procedure
