tests/suite/snapshots/suite__check__tests__check__bad-procedure-return.xi.snap
---
source: tests/suite/check.rs
assertion_line: 21
expression: Snapshot(context)
---
3:12 error:Not a single expression type
