tests/suite/snapshots/suite__check__tests__check__bad-return3.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-return3.xi:2:5]
   │
 2 │     return 1
   ·     ────┬───  
   ·         ╰───── Return mismatch
───╯

