tests/suite/snapshots/suite__check__tests__check__bad-return5.xi.snap
---
source: tests/suite/check.rs
assertion_line: 21
expression: Snapshot(context)
---
7:9 error:Return mismatch
